CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/sfrosit_t_provr_notes_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_provr_notes_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_provr_notes_hist</externalName>
    <label>Provider Notes History</label>
    <pluralLabel>Provider Notes History</pluralLabel>
</CustomObject>