CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/cde_type_notes__c.field-meta.xml
<CustomField>
    <fullName>cde_type_notes__c</fullName>
    <description>cde_type_notes</description>
    <externalDeveloperName>cde_type_notes</externalDeveloperName>
    <label>Type note code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>