CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/dte_begin_effv__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_effv__c</fullName>
    <description>dte_begin_effv</description>
    <externalDeveloperName>dte_begin_effv</externalDeveloperName>
    <label>effective begin date</label>
    <type>Date</type>
</CustomField>