CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/dte_change_last__c.field-meta.xml
<CustomField>
    <fullName>dte_change_last__c</fullName>
    <description>dte_change_last</description>
    <externalDeveloperName>dte_change_last</externalDeveloperName>
    <label>last modified date</label>
    <type>DateTime</type>
</CustomField>