CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/dte_created__c.field-meta.xml
<CustomField>
    <fullName>dte_created__c</fullName>
    <description>dte_created</description>
    <externalDeveloperName>dte_created</externalDeveloperName>
    <label>created date</label>
    <type>DateTime</type>
</CustomField>