CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/idn_notes__c.field-meta.xml
<CustomField>
    <fullName>idn_notes__c</fullName>
    <description>idn_notes</description>
    <externalDeveloperName>idn_notes</externalDeveloperName>
    <label>note id</label>
    <length>50</length>
    <referenceTargetField>T_PROVR_NOTES__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_PROVR_NOTES__c</referenceTo>
    <relationshipLabel>Provider Notes Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_provr_notes_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>