CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/idn_notes_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_notes_hist__c</fullName>
    <description>idn_notes_hist</description>
    <externalDeveloperName>idn_notes_hist</externalDeveloperName>
    <label>note history id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>