CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/ind_flag__c.field-meta.xml
<CustomField>
    <fullName>ind_flag__c</fullName>
    <description>ind_flag</description>
    <externalDeveloperName>ind_flag</externalDeveloperName>
    <label>flad indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>