CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/nam_by_notes__c.field-meta.xml
<CustomField>
    <fullName>nam_by_notes__c</fullName>
    <description>nam_by_notes</description>
    <externalDeveloperName>nam_by_notes</externalDeveloperName>
    <label>notes changed by</label>
    <length>20</length>
    <type>Text</type>
</CustomField>