CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/txt_desc_notes__c.field-meta.xml
<CustomField>
    <fullName>txt_desc_notes__c</fullName>
    <description>txt_desc_notes</description>
    <externalDeveloperName>txt_desc_notes</externalDeveloperName>
    <label>notes description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>