CHATS_SIT/force-app/main/default/objects/sfrosit_t_provr_notes_hist__x/fields/txt_subject__c.field-meta.xml
<CustomField>
    <fullName>txt_subject__c</fullName>
    <description>txt_subject</description>
    <externalDeveloperName>txt_subject</externalDeveloperName>
    <label>subject</label>
    <length>200</length>
    <type>Text</type>
</CustomField>